--- a/apps/licenciamentos/templates/licenciamentos/verifica_doc_licenciamento.html
+++ b/apps/licenciamentos/templates/licenciamentos/verifica_doc_licenciamento.html
@@ -25,53 +25,45 @@ Listagem de Tipologias
                     </div>
                     <div class="card-body">
                         <div class="card-body">
-<!--                            <div class="p-3 mb-2 bg-light text-dark">-->
-<!--                                <div class="row">-->
-<!--                                    <div class="col-md-12">-->
-<!--                                        {{ form.subgrupo.errors }}-->
-<!--                                        <label for="{{ form.subgrupo.id_for_label }}"><strong>Subgrupo:</strong></label>-->
-<!--                                        {{ form.subgrupo | add_class:"form-control"|attr:"autofocus" }}-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
+                            <div class="card-header">
+                                <h5 class="pull-left"><i class="fa fa-download"></i><strong> Arquivos comuns para Download:</strong></h5>
+                                <p> 1. Requerimento - Prefeitura.docx</p>
+                                <p>2. Declaração de Responsabilidade Técnica - DRT.docx</p>
+                                <p>3. Termo de Responsabilidade Ambiental - TRA.docx</p>
+                            </div>
                             <div class="p-3 mb-2 bg-light text-dark">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        {{ form.tipologia.errors }}
-                                        <label for="{{ form.tipologia.id_for_label }}"><strong>Tipologia:</strong></label>
-                                        {{ form.tipologia | add_class:"form-control"|attr:"autofocus" }}
+                                        <label><strong>Descrição:</strong></label>
+                                        <select class="form-control ml-sm-2 mr-sm-2" name="codigo">
+                                            <option value="">---------</option>
+                                            {% for t in tipologias %}
+                                                <option value="{{ t.id }}">
+                                                    {{ t.id }} -
+                                                    {{ t.codigo }} -
+                                                    {{ t.descricao }} -
+                                                    {{ t.p_poluidor }}
+                                                </option>
+                                            {% endfor %}
+                                        </select>
                                     </div>
-<!--                                    <div class="col-md-10">-->
-<!--                                        {{ form.descricao.errors }}-->
-<!--                                        <label for="{{ form.descricao.id_for_label }}"><strong>Descrição:</strong></label>-->
-<!--                                        {{ form.descricao | add_class:"form-control" }}-->
+                                </div>
+                            </div>
+<!--                            <div class="p-3 mb-2 bg-light text-dark">-->
+<!--                                <div class="row">-->
+<!--                                    <div class="col-md-4">-->
+<!--                                        <div class="col-md-4">-->
+<!--                                            <label for="descricao">Valor (R$)</label>-->
+<!--                                            <input type="text" id="descricao" name="descricao" value="{{ t.id }}">-->
+<!--                                        </div>-->
 <!--                                    </div>-->
-                                </div>
-                            </div>
-                            <div class="p-3 mb-2 bg-light text-dark">
-                                <div class="row">
-                                    <div class="col-md-4">
-                                        {{ form.und_medida_desc.errors }}
-                                        <label for="{{ form.und_medida_desc.id_for_label }}"><strong>Unidade de Medida:</strong></label>
-                                        {{ form.und_medida_desc | add_class:"form-control"|attr:"autofocus" }}
-                                    </div>
-                                    <div class="col-md-4">
-                                        {{ form.p_poluidor.errors }}
-                                        <label for="{{ form.p_poluidor.id_for_label }}"><strong>Potencial Poluidor:</strong></label>
-                                        {{ form.p_poluidor | add_class:"form-control"|attr:"autofocus" }}
-                                    </div>
-                                    <div class="col-md-4">
-                                        {{ form.valor.errors }}
-                                        <label for="{{ form.valor.id_for_label }}"><strong> Valor:</strong></label>
-                                        {{ form.valor | add_class:"form-control"|attr:"autofocus" }}
-                                    </div>
-                                </div>
-                            </div>
+<!--                                </div>-->
+<!--                            </div>-->
                         </div>
                     </div>
                     <div class="card-footer py-3">
                         <a class="btn btn-info" href="#"><i
-                                class="fa fa-plus"></i><span> Cadastrar</span></a>             &nbsp;
+                                class="fa fa-search"></i><span> Verificar documentação</span></a>             &nbsp;
                         <button type="button" class="btn btn-primary" onClick="history.go(-1)">
                             <i class="fa fa-angle-double-left"></i> Voltar
                         </button>
