Criado perfil de usuário

--- a/templates/base.html
+++ b/templates/base.html
@@ -153,6 +153,7 @@
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item fa fa-edit" href="#"> Administração</a>
                                     <a class="dropdown-item fa fa-key" href="{% url 'accounts:add_user' %}"> Criar usuário</a>
+                                    <a class="dropdown-item fa fa-user" href="{% url 'accounts:add_user' %}"> Criar usuário</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="{% url 'accounts:user_logout' %}"><i class="fa fa-window-close"></i> Sair</a>
                                 </div>
