--- a/apps/accounts/templates/accounts/add_user_profile.html
+++ b/apps/accounts/templates/accounts/add_user_profile.html
@@ -23,9 +23,9 @@ Meu Perfil - {{ block.super }}
                                 <div class="p-3 mb-2 bg-light text-dark">
                                     <div class="row">
                                         <div class="col-md-12">
-                                            {{ form.foto.errors }}
-                                            <label for="{{ form.foto.id_for_label }}"><strong>Foto:</strong></label>
-                                            {{ form.foto | add_class:"form-control"|attr:"autofocus" }}
+                                            {{ form.photo.errors }}
+                                            <label for="{{ form.photo.id_for_label }}"><strong>Foto:</strong></label>
+                                            {{ form.photo | add_class:"form-control"|attr:"autofocus" }}
                                         </div>
                                     </div>
                                 </div>
