--- a/templates/base.html
+++ b/templates/base.html
@@ -138,7 +138,7 @@
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 {% if user.profile.photo %}
-                                <img src="{{ user.profile.foto.url }}" class="rounded-circle" width="40" height="40">
+                                <img src="{{ profile.photo.url }}" class="rounded-circle" width="40" height="40">
                                 {% else %}
                                 <img src="{% static 'images/static_img_user.png' %}" class="rounded-circle" width="40" height="40">
                                 {% endif %}
@@ -148,8 +148,7 @@
                                 <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown" aria-haspopup="true"
                                    aria-expanded="false">{{ user.get_full_name|default:user.username }}</a>
                                 <div class="dropdown-menu" aria-labelledby="dropdown07">
-                                    <a class="dropdown-item fa fa-user" href="#"> Perfil</a>
-                                    <a class="dropdown-item fa fa-plus" href="{% url 'accounts:add_user_profile' %}"> Criar Perfil</a>
+                                    <a class="dropdown-item fa fa-user" href="{% url 'accounts:list_user_profile' %}"> Perfil</a>
                                     <a class="dropdown-item fa fa-key" href="{% url 'accounts:user_change_password' %}"> Trocar senha</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item fa fa-edit" href="#"> Administração</a>
@@ -158,8 +157,8 @@
                                     <a class="dropdown-item" href="{% url 'accounts:user_logout' %}"><i class="fa fa-window-close"></i> Sair</a>
                                 </div>
                             </li>
-                            {% endif %}
                         </ul>
+                        {% endif %}
                 </div>
             </nav>
             {% block content %}l
