--- a/templates/base.html
+++ b/templates/base.html
@@ -110,40 +110,26 @@
             <nav class="navbar navbar-light navbar-expand bg-gradient-light p-0 shadow mb-4 topbar static-top">
                 <div class="container-fluid">
                     <button class="btn btn-link d-md-none rounded-circle mr-3" id="sidebarToggleTop" type="button">
-                        <i class="fas fa-bars"></i></button>
-                    <!--                    <form class="form-inline d-none d-sm-inline-block mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">-->
-                    <!--                        <div class="input-group"><input class="bg-light form-control border-0 small" type="text"-->
-                    <!--                                                        placeholder="Search for ...">-->
-                    <!--                            <div class="input-group-append">-->
-                    <!--                                <button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i>-->
-                    <!--                                </button>-->
-                    <!--                            </div>-->
-                    <!--                        </div>-->
-                    <!--                    </form>-->
-                    <ul class="nav navbar-nav flex-nowrap ml-auto">
-<!--                        {% if request.user.is_staff %}-->
-<!--                        <li class="nav-item dropdown no-arrow mx-1" role="presentation" >-->
-<!--                            <div class="nav-item no-arrow">-->
-<!--                                <a class="dropdown-toggle nav-link" href="/cadastros/vacinas/admin/">-->
-<!--                                    <span class="badge badge-info">Admin</span>-->
-<!--                                </a>-->
-<!--                            </div>-->
-<!--                        </li>-->
-<!--                        {% endif %}-->
-<!--                        <div class="d-none d-sm-block topbar-divider"></div>-->
-<!--                        <ul class="navbar-nav sidenav-toggler">-->
-
-                        </ul>
-                        {% if user.is_authenticated %}
+                    <i class="fas fa-bars"></i></button>
+                        <form class="form-inline d-none d-sm-inline-block mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                            <div class="input-group"><input class="bg-light form-control border-0 small" type="text"
+                                                            placeholder="Procurar por ...">
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    <ul class="nav navbar-nav flex-nowrap ml-auto"></ul>
+                    {% if user.is_authenticated %}
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 {% if user.profile.photo %}
-                                <img src="{{ profile.photo.url }}" class="rounded-circle" width="40" height="40">
+                                <img src="{{ user.profile.photo.url }}" class="rounded-circle" width="40" height="40">
                                 {% else %}
                                 <img src="{% static 'images/static_img_user.png' %}" class="rounded-circle" width="40" height="40">
                                 {% endif %}
                             </li>
-
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown" aria-haspopup="true"
                                    aria-expanded="false">{{ user.get_full_name|default:user.username }}</a>
@@ -158,7 +144,8 @@
                                 </div>
                             </li>
                         </ul>
-                        {% endif %}
+                    {% endif %}
+                    </ul>
                 </div>
             </nav>
             {% block content %}l
