Criando link para arquivos comuns a todos licenciamentos

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,8 @@
                                                 <div class="card">
                                                     <div class="card-body">
                                                         <h5 class="card-title"><strong>Verificar documentação para Licenciamento</strong></h5>
-                                                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                                        <p class="card-text">Clique no botão abaixo e seja redirecionado
+                                                            à pagina com a listagem dos arquivos para download.</p>
                                                         <a href="{% url 'licenciamentos:verifica_doc_licenciamento' %}" class="btn btn-primary">Ir</a>
                                                     </div>
                                                 </div>
@@ -32,7 +33,8 @@
                                                 <div class="card">
                                                     <div class="card-body">
                                                         <h5 class="card-title"><strong>Enviar documentação para Licenciamento</strong></h5>
-                                                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                                        <p class="card-text">Clique no botão abaixo e seja redirecionado
+                                                            à pagina para adicionar as informações da empresa e do arquivo para upload.</p>
                                                         <a href="#" class="btn btn-primary">Ir</a>
                                                     </div>
                                                 </div>
