--- a/apps/accounts/templates/accounts/add_user_profile.html
+++ b/apps/accounts/templates/accounts/add_user_profile.html
@@ -42,11 +42,7 @@ Meu Perfil - {{ block.super }}
                             <div class="card-footer">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <button type="submit" class="btn btn-info"><i class="fa fa-check"></i> Salvar</button>
-                                        &nbsp;
-                                        <button type="button" class="btn btn-primary" onClick="history.go(-1)">
-                                            <i class="fa fa-angle-double-left"></i> Voltar
-                                        </button>
+                                        <button type="submit" class="btn btn-primary">Salvar</button>
                                     </div>
                                 </div>
                             </div>
